--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,27 @@
 body {
   margin: 0;
-  font-family: -apple-system,
-   BlinkMacSystemFont,
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
     'Segoe UI',
-     'Roboto',
-     'Oxygen',
+    'Roboto',
+    'Oxygen',
     'Ubuntu',
     'Cantarell',
-     'Fira Sans', 
-     'Droid Sans',
-      'Helvetica Neue',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family:
+    source-code-pro,
+    Menlo,
+    Monaco,
+    Consolas,
+    'Courier New',
     monospace;
 }
