--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  background-color: #494949;
+}
+
 input {
   background-color: #808080;
   color: aliceblue;
@@ -37,4 +41,54 @@ input {
 
 .sacndry-color {
   background-color: #f59300;
+}
+
+.calc-header {
+  text-align: center;
+  font-size: 1.3em;
+  color: #f59300;
+  margin-top: 3em;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  margin: 1em;
+}
+
+.nav-bar h1 {
+  color: #f59300;
+}
+
+.nav-bar ul {
+  display: flex;
+  list-style: none;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+.nav-bar li {
+  margin-right: 1em;
+  color: #f59300;
+  text-decoration: none;
+}
+
+.nav-bar Link::visited {
+  color: rgb(0, 0, 0);
+}
+
+.quote {
+  text-align: center;
+  margin-top: 30vh;
+  margin-left: 2em;
+  margin-right: 2em;
+  color: #f59300;
+}
+
+.home {
+  text-align: center;
+  font-size: 1em;
+  margin: 2em;
+  color: #f59300;
+  margin-top: 20vh;
 }
